# ink

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
crates/: README.md
crates/ink-api/: Cargo.toml
crates/ink-api/src/: lib.rs
crates/ink-api/tests/: auth_api.rs
crates/ink-cli/: Cargo.toml
crates/ink-cli/src/: main.rs  mirror.rs  session_refresh.rs
crates/ink-cli/src/commands/: auth.rs  mod.rs  note.rs  profile.rs  sync.rs  tag.rs
crates/ink-cli/tests/: auth_phase1.rs  mirror_conflicts_integration.rs  note_tag_integration.rs  phase4_note_tag.rs  phase5_mirror_conflicts.rs  sync_phase23.rs
crates/ink-core/: Cargo.toml
crates/ink-core/src/: error.rs  lib.rs
crates/ink-crypto/: Cargo.toml
crates/ink-crypto/src/: lib.rs
crates/ink-fs/: Cargo.toml
crates/ink-fs/src/: config.rs  doctor.rs  lib.rs  workspace.rs
crates/ink-fs/tests/: workspace.rs
crates/ink-store/: Cargo.toml
crates/ink-store/src/: lib.rs
crates/ink-store/tests/: session_store.rs
crates/ink-sync/: Cargo.toml
crates/ink-sync/src/: lib.rs
docs/: PUBLISHING_PLAN.md
scripts/: README.md  new-module.sh
