[package]
name = "ink-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
ink-core = { path = "../ink-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
