[package]
name = "ink-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
ink-api = { path = "../ink-api" }
ink-core = { path = "../ink-core" }
ink-fs = { path = "../ink-fs" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
